# alg-lab3

./: .gitignore  CMakeLists.txt  lis.cpp  lis.hpp  parens.cpp  parens.hpp  task1.cpp  task2.cpp  test.cpp
